Fixed alignment issue with ship canvas

--- a/canvas.css
+++ b/canvas.css
@@ -9,10 +9,11 @@ body{
 }
 
 #shipdiv{
+	width: 1000px;
+	height: 200px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 20px;
-	width: 80%; /*Centers the canvas*/
 	background-color: #4080bf;
 	box-shadow: 0px 0px 10px 10px #4080bf;
 }
@@ -21,6 +22,7 @@ body{
 	width: 400px;
 	height: 200px;
 	box-shadow: 0px 0px 10px 10px #4080bf;
+	margin: auto;
 }
 
 .inlinebox{
